--- a/PeopleMon/Storyboards/Main.storyboard
+++ b/PeopleMon/Storyboards/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="uzc-l4-KNI">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -34,19 +34,74 @@
                         <viewControllerLayoutGuide type="bottom" id="V7v-vw-bFh"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="eMO-fs-wtO">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Lf3-RW-y0Z">
+                                <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                            </mapView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Lf3-RW-y0Z" firstAttribute="leading" secondItem="eMO-fs-wtO" secondAttribute="leading" id="93I-4d-Zr4"/>
+                            <constraint firstAttribute="trailing" secondItem="Lf3-RW-y0Z" secondAttribute="trailing" id="OGJ-o9-e21"/>
+                            <constraint firstItem="Lf3-RW-y0Z" firstAttribute="top" secondItem="j9k-wy-OUz" secondAttribute="bottom" id="P0e-S5-tct"/>
+                            <constraint firstItem="V7v-vw-bFh" firstAttribute="top" secondItem="Lf3-RW-y0Z" secondAttribute="bottom" id="Z97-Q3-hW8"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="xUd-dd-ikB"/>
+                    <navigationItem key="navigationItem" id="xUd-dd-ikB">
+                        <barButtonItem key="leftBarButtonItem" systemItem="done" id="C7M-EI-Mdy">
+                            <connections>
+                                <action selector="logoutTapped:" destination="vbb-34-MUd" id="pRH-a6-pbb"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
+                        <outlet property="mapView" destination="Lf3-RW-y0Z" id="c4U-Pw-JkM"/>
                         <segue destination="qIE-YC-aKa" kind="presentation" identifier="PresentLogin" id="Lu4-1L-USV"/>
                         <segue destination="qIE-YC-aKa" kind="presentation" identifier="PresentLoginNoAnimation" animates="NO" id="JD9-aS-Jgo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KJ4-Lr-GmJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-322" y="196"/>
+            <point key="canvasLocation" x="-322.5" y="196.47887323943661"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="D34-bE-5qN">
+            <objects>
+                <viewController id="12r-3E-ddN" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ABW-Wl-Sx0"/>
+                        <viewControllerLayoutGuide type="bottom" id="Odo-Bi-XyT"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="mpO-mG-M21">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rxG-8k-SJN" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="499" y="213"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="pmp-y9-dlW">
+            <objects>
+                <viewController id="fz1-N4-Few" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="PoI-AR-6I0"/>
+                        <viewControllerLayoutGuide type="bottom" id="Sg4-uo-91f"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="hK3-Xi-Xsf">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="VTm-mY-zrO"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Uff-WE-pZQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="482" y="-517"/>
         </scene>
         <!--Login-->
         <scene sceneID="shN-aV-AsF">
@@ -54,10 +109,10 @@
                 <viewControllerPlaceholder storyboardName="Login" id="qIE-YC-aKa" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OMh-zK-rxC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-322" y="626"/>
+            <point key="canvasLocation" x="-322" y="689"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="JD9-aS-Jgo"/>
+        <segue reference="Lu4-1L-USV"/>
     </inferredMetricsTieBreakers>
 </document>
