--- a/PeopleMon/Storyboards/Main.storyboard
+++ b/PeopleMon/Storyboards/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -23,7 +24,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bFc-by-4ID" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1190" y="197"/>
+            <point key="canvasLocation" x="-680" y="256"/>
         </scene>
         <!--Map View Controller-->
         <scene sceneID="xVv-2P-7jf">
@@ -38,7 +39,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Lf3-RW-y0Z">
-                                <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -50,11 +51,24 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="xUd-dd-ikB">
-                        <barButtonItem key="leftBarButtonItem" systemItem="done" id="C7M-EI-Mdy">
+                        <nil key="title"/>
+                        <barButtonItem key="leftBarButtonItem" systemItem="stop" id="C7M-EI-Mdy">
                             <connections>
                                 <action selector="logoutTapped:" destination="vbb-34-MUd" id="pRH-a6-pbb"/>
                             </connections>
                         </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem style="plain" systemItem="edit" id="ilG-AD-vI3">
+                                <connections>
+                                    <segue destination="12r-3E-ddN" kind="show" id="K5K-5S-12t"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem systemItem="action" id="eCf-kV-oKN">
+                                <connections>
+                                    <segue destination="YEu-CB-mxW" kind="presentation" id="fT7-Ls-WIg"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
                     <connections>
                         <outlet property="mapView" destination="Lf3-RW-y0Z" id="c4U-Pw-JkM"/>
@@ -64,12 +78,63 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KJ4-Lr-GmJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-322.5" y="196.47887323943661"/>
+            <point key="canvasLocation" x="9" y="256"/>
         </scene>
-        <!--View Controller-->
+        <!--Navigation Controller-->
+        <scene sceneID="9yo-kb-9e7">
+            <objects>
+                <navigationController id="YEu-CB-mxW" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="XkK-KV-mWp">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="hLP-Ga-4JV" kind="relationship" relationship="rootViewController" id="tUc-Y3-0Kw"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rDe-oC-ZSc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-195" y="-481"/>
+        </scene>
+        <!--Caught View Controller-->
+        <scene sceneID="46L-DS-pYh">
+            <objects>
+                <tableViewController id="hLP-Ga-4JV" customClass="CaughtViewController" customModule="PeopleMon" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="vZv-kG-eR2">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Mzr-5A-lCR">
+                                <rect key="frame" x="0.0" y="28" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Mzr-5A-lCR" id="gxh-oO-eNa">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="hLP-Ga-4JV" id="MW9-ab-5ha"/>
+                            <outlet property="delegate" destination="hLP-Ga-4JV" id="OgU-2H-ldz"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="dOP-Uc-5Io">
+                        <barButtonItem key="leftBarButtonItem" style="plain" systemItem="done" id="eoc-jW-OkD">
+                            <connections>
+                                <segue destination="vbb-34-MUd" kind="show" id="vgZ-J9-UXX"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1V2-wp-Yif" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="593" y="-482"/>
+        </scene>
+        <!--Profile View Controller-->
         <scene sceneID="D34-bE-5qN">
             <objects>
-                <viewController id="12r-3E-ddN" sceneMemberID="viewController">
+                <viewController id="12r-3E-ddN" customClass="ProfileViewController" customModule="PeopleMon" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ABW-Wl-Sx0"/>
                         <viewControllerLayoutGuide type="bottom" id="Odo-Bi-XyT"/>
@@ -77,31 +142,43 @@
                     <view key="view" contentMode="scaleToFill" id="mpO-mG-M21">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Nlb-oK-W4u">
+                                <rect key="frame" x="103" y="72" width="115" height="100"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Riley Osborne" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Ed-ru-Vjy">
+                                <rect key="frame" x="95" y="248" width="130" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fJJ-rr-l9X">
+                                <rect key="frame" x="16" y="277" width="288" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UBt-tD-S8e">
+                                <rect key="frame" x="95" y="315" width="123" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Update Name"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EEf-NO-E7G">
+                                <rect key="frame" x="103" y="180" width="115" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Update Avatar"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" id="zge-UC-709"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rxG-8k-SJN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="499" y="213"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="pmp-y9-dlW">
-            <objects>
-                <viewController id="fz1-N4-Few" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="PoI-AR-6I0"/>
-                        <viewControllerLayoutGuide type="bottom" id="Sg4-uo-91f"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="hK3-Xi-Xsf">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="VTm-mY-zrO"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Uff-WE-pZQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="482" y="-517"/>
+            <point key="canvasLocation" x="716" y="256"/>
         </scene>
         <!--Login-->
         <scene sceneID="shN-aV-AsF">
@@ -113,6 +190,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
+        <segue reference="vgZ-J9-UXX"/>
         <segue reference="Lu4-1L-USV"/>
     </inferredMetricsTieBreakers>
 </document>
