--- a/PeopleMon/Storyboards/Main.storyboard
+++ b/PeopleMon/Storyboards/Main.storyboard
@@ -39,7 +39,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Lf3-RW-y0Z">
-                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                             </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -78,7 +78,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KJ4-Lr-GmJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="9" y="256"/>
+            <point key="canvasLocation" x="7.5" y="255.63380281690141"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="9yo-kb-9e7">
@@ -94,7 +94,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rDe-oC-ZSc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-195" y="-481"/>
+            <point key="canvasLocation" x="-201" y="-483"/>
         </scene>
         <!--Caught View Controller-->
         <scene sceneID="46L-DS-pYh">
@@ -105,13 +105,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Mzr-5A-lCR">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PeopleCell" id="Mzr-5A-lCR" customClass="PeopleCell" customModule="PeopleMon" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Mzr-5A-lCR" id="gxh-oO-eNa">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="PeopleMon" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BjM-V7-aKq">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="nameLabel" destination="BjM-V7-aKq" id="Y6k-Qc-k7N"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -122,6 +134,7 @@
                     <navigationItem key="navigationItem" id="dOP-Uc-5Io">
                         <barButtonItem key="leftBarButtonItem" style="plain" systemItem="done" id="eoc-jW-OkD">
                             <connections>
+                                <action selector="done:" destination="hLP-Ga-4JV" id="x7j-gY-PnJ"/>
                                 <segue destination="vbb-34-MUd" kind="show" id="vgZ-J9-UXX"/>
                             </connections>
                         </barButtonItem>
@@ -129,7 +142,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1V2-wp-Yif" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="593" y="-482"/>
+            <point key="canvasLocation" x="592.5" y="-482.74647887323943"/>
         </scene>
         <!--Profile View Controller-->
         <scene sceneID="D34-bE-5qN">
@@ -175,6 +188,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="zge-UC-709"/>
+                    <connections>
+                        <outlet property="avatar" destination="Nlb-oK-W4u" id="KPI-oK-W4O"/>
+                        <outlet property="nameField" destination="fJJ-rr-l9X" id="Z7U-hw-NPq"/>
+                        <outlet property="nameLabel" destination="7Ed-ru-Vjy" id="uft-2b-NQv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rxG-8k-SJN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
